2011-04-27 Matthias Schulz <ma.schulz@email.de>

	- Graphdrawing library documentation, split into two files, removed
	noluatex file, reworked the text (added information).

2011-04-25 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- First attempt to do math with lua (very basical): pgflibraryluamath

2011-04-18  Christian Feuersaenger <ludewich@users.sourceforge.net>

	- bugfix for rounding error in \pgfmathdivide{83.407811000}{16.68156400}
	was 4.10, is now 5.0: it could happen in rare cases that digits where 
	appended where they shouldhave been than added (4 + .10 instead of 4 + 1.0)

2011-04-22 Jannis Pohlmann <jannis@xfce.org>

	- Implemented a G_n subgraph for creating grid (or: mesh) graphs.
	This also introduces a new key /tikz/graphs/wrap after=<number> that
	configures how the nodes in such a grid graph are connected. Some of
	the common subgraph keys such as /tikz/graphs/V and /tikz/graphs/n 
	can be used with G_n subgraphs as well.
	- Added a simple grid placement strategy. It currently does not 
	support the chain shift and group shift keys properly and does not 
	implement any placement order other than left-to-right, so there is
	room for improvement.

2011-04-18  Christian Feuersaenger <ludewich@users.sourceforge.net>
	
	- external lib: reduced number of \newwrite allocations and allowed to disable features
	to safe more of them (aux in dpth=false,disable dependency files)

2011-04-17  Christian Feuersaenger <ludewich@users.sourceforge.net>
	
	- added '/pgf/number format/relative' formatting style.

2011-03-22 Till Tantau <tantau@users.sourceforge.net>

	- Finished documentation of data visualization (sort of)! 
	- First usable version of data visualization!

2011-03-15 Till Tantau <tantau@users.sourceforge.net>

	- Worked on dv documentation. Finished chapter on visualizers,
	style sheets. Legends still missing

2011-03-07 Till Tantau <tantau@users.sourceforge.net>

	- Worked on dv documentation. Finished chapter on axes.
