@@ -1,3 +1,7 @@
+2011-04-29 Christophe Jorssen <cjorssen@users.sourceforge.net>
+
+	- Work on pgflibraryluamath (added pgfpointnormalised)
+
 2011-04-27 Matthias Schulz <ma.schulz@email.de>
 
 	- Graphdrawing library documentation, split into two files, removed
